# supertrack

./: .env.dev  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Procfile  README.md  docker-compose.yaml  init.sql  manage.py  package-lock.json  package.json  pyproject.toml  render.yaml  requirements.txt  tsconfig.json  webpack-stats.json  webpack.config.js
builds/: bundle.js
docs/: consum_categories  mercadona_categories  possible_categories
statics/dashboard/builds/: bundle.js  bundle.js.map
statics/dashboard/css/: dashboard.css
statics/dashboard/js/: Provider.tsx  history.ts  index.tsx  reducers.ts  sagas.ts
statics/dashboard/js/api/: _base.ts  shoppingList.ts  urls.json
statics/dashboard/js/bootstrap/: dashboard.js
statics/dashboard/js/components/: ShoppingListCategories.tsx  ShoppingListMercadona.tsx  ShoppingListPage.tsx
statics/dashboard/js/constants/: urls.ts
supertrack/: asgi.py  settings.py  urls.py  wsgi.py
supertrack/apps/: HealthView.py  base_models.py
supertrack/apps/dashboards/: apps.py  urls.py  views.py
supertrack/apps/scrappy/: admin.py  apps.py  models.py  urls.py  views.py
supertrack/apps/shopping_list/: admin.py  apps.py  models.py  urls.py  views.py
supertrack/apps/ticket/: admin.py  apps.py  models.py  signals.py
supertrack/forms/: CustomSignUpForm.py
supertrack/generic_views/: custom_login.py
supertrack/helpers/: admin.py  div_error_list.py  filer.py
supertrack/templates/account/: login.html  logout.html  sigin.html  signup.html
supertrack/templates/socialaccount/: login.html
(+84 files in other folders)
