[tool.poetry]
name = "supertrack"
version = "0.0.0"
description = "App to register supermarket tickets and get reports about product prices"
authors = ["Jonathan Rodríguez Alejos <jonathan.rodriguez.alejos@gmail.com>"]
readme = "README.md"
packages = [{include = "supertrack"}]
include = ["pre-commit-config.yaml"]

[tool.poetry.dependencies]
python = "^3.12.7"
flake8 = "^6.0.0"
isort = "^5.12.0"
pre-commit = "^3.1.1"
coverage = "^7.2.2"
django = "^5.1.2"
uuid = "^1.30"
psycopg2-binary = "^2.9.7"
pillow = "^10.4.0"
pdfplumber = "^0.11.4"
requests = "^2.32.3"
gunicorn = "^23.0.0"
whitenoise = {extras = ["brotli"], version = "^6.7.0"}
django-allauth = "^65.0.2"
pyjwt = "^2.9.0"
django-widget-tweaks = "^1.5.0"
django-redis = "^5.4.0"
rapidfuzz = "^3.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
extend-exclude="# noqa"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79
